--- a/src/styles/reviews.css
+++ b/src/styles/reviews.css
@@ -7,3 +7,9 @@
   text-align: center;
   margin-bottom: 5px;
 }
+
+.submitReview {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
+}
